Version 0.5pre2 -- DEVELOPMENT
------------------------------
- Applied fixes for Courier IMAP server (by Andreas Dahl)
- Fixed some buggy IMAP handling
- Improved word wrapping
- Made message highlighting not case sensative
- Added French translation from Ali Nedjimi <lrdfrx@club-internet.fr>


Version 0.5pre1 -- August 9, 2000 
---------------------------------
- Searching folders functionality added 
- Date display now is similar to Netscape Messenger
- Many bugs have been reported to the list, and been squashed
- Help system developed 
- Folder list now shows configurable details about messages
- It is now possible to select multiple subscribes/unsubscribes
- Removed a bunch of annoying "success" screens, improved navigation
- Better IMAP session handling
- Redid the options section and split it into different parts
- Added "view all headers" option when reading a message
- In-Reply-To and References headers are inserted when replying to a message.
- Changed how attachments are displayed and handled
- Rewrote MIME support from scratch, optomizing it an unbelievable amount
- Added support for message highlighting
- Moved Address and Send buttons on Compose form for easier access 
- Added Polish translation from Lukasz Klimek <casa@LO.Pila.PL>
- Added Swedish translation from Tobias Ekbom
- Added Brazilian Portuguse translation from Henrique Moura
- Added Dutch translation from Arjen Halma



Version 0.4 -- May 15, 2000 
---------------------------
- If subject is blank, displays "(no subject)"
- Fixed a few minor bugs and typos reported to list
- Changed <? to <?php in a few places

Version 0.4pre2 -- May 5, 2000
------------------------------
- Replying sets the "Answered" flag on the original message
- When message is sent, it sends you to the folder you were looking at.
- HTML based address book search
- Made folder listing look first at subscribed folders, making it
     faster, even if you don't have $folder_prefix set.